previous_releases/3.4.2/_sources/index.txt
*******************************************
perfSONAR Toolkit User Guide
*******************************************

The perfSONAR Toolkit is a collection of software for performing and sharing end-to-end network measurements. This document guides you through the process of installing, configuring and using the perfSONAR Toolkit on one or more hosts. 

Installation
============
.. toctree::
   :maxdepth: 2
   
   install_quick_start
   install_sys_requirements
   install_getting
   install_centos_netinstall
   install_centos_fullinstall
   install_config_first_time
   
Managing the perfSONAR Toolkit
==============================
.. toctree::
   :maxdepth: 2
   
   manage_choose
   manage_regular_tests
   manage_admin_info
   manage_services
   manage_ntp
   manage_logs
   manage_update
   manage_users
   manage_tuning
   manage_dual_xface
   manage_security
   manage_extra_tools

Managing Multiple perfSONAR Toolkits
====================================
.. toctree::
   :maxdepth: 2
   
   multi_overview
   multi_server_config
   multi_agent_config
   multi_central_MA
   
Using the perfSONAR Toolkit
============================
.. toctree::
   :maxdepth: 2
   
   using_graphs
   using_ndt
   using_npad
   using_ext_tools
   
Using Additional Tools
======================
.. toctree::
   :maxdepth: 2
   
   install_psui
   using_psui

Additional Installation Options
===============================
.. toctree::
   :maxdepth: 2

   install_level12
   install_debian
   
Accessing Raw Data 
=======================
.. toctree::
   :maxdepth: 1
   
   client_apis

Configuration Reference
=======================
.. toctree::
   :maxdepth: 2
   
   config_bwctl
   config_bwctl_limits
   config_esmond_data_cleaner
   config_ls_registration
   config_mesh
   config_oppd
   config_owamp
   config_owamp_limits
   config_regular_testing

Further Information
===================
* `Project Homepage <http://www.perfsonar.net>`_
* `Source Code Repository <https://github.com/perfsonar>`_
* `Issue Tracker <https://github.com/perfsonar/project/issues>`_
* `Project Wiki <https://github.com/perfsonar/project/wiki>`_
* `Frequently Asked Questions (FAQs) <http://www.perfsonar.net/about/faq/>`_
* Mailing Lists

  * `User Mailing List <https://lists.internet2.edu/sympa/subscribe/perfsonar-user>`_ - Forum where users may ask and answer questions about their perfSONAR Toolkit deployments
  * `Announcement Mailing List <https://lists.internet2.edu/sympa/subscribe/perfsonar-announce>`_ - List where important announcements such as new releases and security updates are posted.

Related Projects
================
* `esmond <http://software.es.net/esmond/>`_
* `iperf3 <http://software.es.net/iperf/>`_
* `Lookup Service <http://code.google.com/p/simple-lookup-service/>`_
* `MaDDash <http://software.es.net/maddash/>`_
* `NDT <http://software.internet2.edu/ndt/>`_
* `psUI <https://forge.geant.net/forge/display/perfsonar/Change+Log/>`_
 
Search
==================

* :ref:`search`
